<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroud"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".view.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/primary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="@font/poppinsregular"
        android:textSize="12sp"
        android:layout_gravity="start"
        android:textColor="@color/primary"
        android:layout_marginBottom="8dp"/>
    <com.polije.storyapps.customview.AppEditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/poppinsregular"
        android:textSize="12sp"
        android:paddingStart="15dp"
        android:background="@drawable/custom_bg_et"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppinsregular"
        android:textSize="12sp"
        android:layout_gravity="start"
        android:textColor="@color/primary"
        android:layout_marginBottom="8dp"/>
    <com.polije.storyapps.customview.AppEditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="12sp"
        android:paddingStart="15dp"
        android:background="@drawable/custom_bg_et"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsregular"
        android:textSize="12sp"
        android:layout_gravity="start"
        android:textColor="@color/primary"
        android:layout_marginBottom="8dp"/>
    <com.polije.storyapps.customview.AppEditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="12sp"
        android:paddingStart="15dp"
        android:background="@drawable/custom_bg_et"
        android:inputType="textPassword"
        />

    <com.polije.storyapps.customview.AppButton
        android:id="@+id/btn_register"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/primary" />

        <TextView
            android:id="@+id/tv_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/login"
            android:layout_marginStart="5dp"
            android:textColor="@color/primary"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>