<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity">
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_gravity="center|start"
            android:fontFamily="@font/poppinsbold"
            android:layout_marginStart="20dp"
            android:textSize="16sp"/>
            <ImageView
                android:id="@+id/iv_maps"
                android:layout_width="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_map_24"/>
        </LinearLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frame"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_bg_button"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/add_story"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bg_button"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/logout"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>